// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionDetailAddressList > should render addresses in xs 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionDetailAddressList"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        <div
          class="flex items-center space-x-4"
        >
          <span>
            Recipients (2)
          </span>
          <div
            class="hidden sm:inline-block"
          >
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
              type="vertical"
            />
          </div>
          <a
            class="ring-focus group inline-block hidden sm:block css-7nwwrh"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
            rel="noopener noreferrer"
          >
            <span
              class="css-170792"
            >
              View Full List
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </div>
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          <div
            class="hidden w-0 flex-1 text-right sm:block md:text-left"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
            >
              <span
                class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                test-address1
              </span>
            </div>
          </div>
          <a
            class="ring-focus group inline-block block w-32 sm:hidden css-7nwwrh"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
            rel="noopener noreferrer"
          >
            <span
              class="css-170792"
            >
              View Full List
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </div>
        <div
          class="hidden items-center sm:flex space-x-2"
        >
          <div
            class="shrink-0 css-1yk316i"
            data-testid="Avatar"
          >
            <div
              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
            >
              <img
                alt="test-address1"
                src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="55" cx="90" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="100" cy="60" fill="rgb(0, 188, 212)"/><circle r="60" cx="50" cy="30" fill="rgb(139, 195, 74)"/></svg>"
                title="test-address1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetailAddressList > should render addresses in xs 2`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionDetailAddressList"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        <div
          class="flex items-center space-x-4"
        >
          <span>
            Recipients (2)
          </span>
          <div
            class="hidden sm:inline-block"
          >
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
              type="vertical"
            />
          </div>
          <a
            class="ring-focus group inline-block hidden sm:block css-7nwwrh"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
            rel="noopener noreferrer"
          >
            <span
              class="css-170792"
            >
              View Full List
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </div>
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          <div
            class="hidden w-0 flex-1 text-right sm:block md:text-left"
          >
            <div
              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
            >
              <span
                class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                test-address1
              </span>
            </div>
          </div>
          <a
            class="ring-focus group inline-block block w-32 sm:hidden css-7nwwrh"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
            rel="noopener noreferrer"
          >
            <span
              class="css-170792"
            >
              View Full List
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </div>
        <div
          class="hidden items-center sm:flex space-x-2"
        >
          <div
            class="shrink-0 css-1yk316i"
            data-testid="Avatar"
          >
            <div
              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
            >
              <img
                alt="test-address1"
                src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="55" cx="90" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="100" cy="60" fill="rgb(0, 188, 212)"/><circle r="60" cx="50" cy="30" fill="rgb(139, 195, 74)"/></svg>"
                title="test-address1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetailAddressList > should render addresses in xs 3`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionDetailAddressList"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        <div
          class="flex items-center space-x-4"
        >
          <span>
            Recipients (2)
          </span>
          <div
            class="hidden sm:inline-block"
          >
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
              type="vertical"
            />
          </div>
          <a
            class="ring-focus group inline-block hidden sm:block css-7nwwrh"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
            rel="noopener noreferrer"
          >
            <span
              class="css-170792"
            >
              View Full List
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </div>
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="hidden w-0 flex-1 text-right sm:block md:text-left"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
              data-testid="Address__address"
            >
              test-address1
            </span>
          </div>
        </div>
        <a
          class="ring-focus group inline-block block w-32 sm:hidden css-7nwwrh"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
          rel="noopener noreferrer"
        >
          <span
            class="css-170792"
          >
            View Full List
          </span>
          <div
            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
            data-testid="Link__external"
            height="16"
            width="16"
          >
            <svg
              id="arrow-external"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </a>
      </div>
    </div>
    <div
      class="hidden items-center sm:flex -space-x-1"
    >
      <div
        class="shrink-0 css-1n9jllj"
        data-testid="Avatar"
      >
        <div
          class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
        >
          <img
            alt="test-address1"
            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="55" cx="90" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="100" cy="60" fill="rgb(0, 188, 212)"/><circle r="60" cx="50" cy="30" fill="rgb(139, 195, 74)"/></svg>"
            title="test-address1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetailAddressList > should render addresses in xs 4`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionDetailAddressList"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        <div
          class="flex items-center space-x-4"
        >
          <span>
            Recipients (2)
          </span>
          <div
            class="hidden sm:inline-block"
          >
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
              type="vertical"
            />
          </div>
          <a
            class="ring-focus group inline-block hidden sm:block css-7nwwrh"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
            rel="noopener noreferrer"
          >
            <span
              class="css-170792"
            >
              View Full List
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </div>
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="hidden w-0 flex-1 text-right sm:block md:text-left"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
              data-testid="Address__address"
            >
              test-address1
            </span>
          </div>
        </div>
        <a
          class="ring-focus group inline-block block w-32 sm:hidden css-7nwwrh"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
          rel="noopener noreferrer"
        >
          <span
            class="css-170792"
          >
            View Full List
          </span>
          <div
            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
            data-testid="Link__external"
            height="16"
            width="16"
          >
            <svg
              id="arrow-external"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </a>
      </div>
    </div>
    <div
      class="hidden items-center sm:flex -space-x-1"
    >
      <div
        class="shrink-0 css-1n9jllj"
        data-testid="Avatar"
      >
        <div
          class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
        >
          <img
            alt="test-address1"
            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="55" cx="90" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="100" cy="60" fill="rgb(0, 188, 212)"/><circle r="60" cx="50" cy="30" fill="rgb(139, 195, 74)"/></svg>"
            title="test-address1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetailAddressList > should render addresses in xs 5`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionDetailAddressList"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        <div
          class="flex items-center space-x-4"
        >
          <span>
            Recipients (2)
          </span>
          <div
            class="hidden sm:inline-block"
          >
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
              type="vertical"
            />
          </div>
          <a
            class="ring-focus group inline-block hidden sm:block css-7nwwrh"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
            rel="noopener noreferrer"
          >
            <span
              class="css-170792"
            >
              View Full List
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </div>
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="hidden w-0 flex-1 text-right sm:block md:text-left"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
              data-testid="Address__address"
            >
              test-address1
            </span>
          </div>
        </div>
        <a
          class="ring-focus group inline-block block w-32 sm:hidden css-7nwwrh"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
          rel="noopener noreferrer"
        >
          <span
            class="css-170792"
          >
            View Full List
          </span>
          <div
            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
            data-testid="Link__external"
            height="16"
            width="16"
          >
            <svg
              id="arrow-external"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </a>
      </div>
    </div>
    <div
      class="hidden items-center sm:flex -space-x-1"
    >
      <div
        class="shrink-0 css-1n9jllj"
        data-testid="Avatar"
      >
        <div
          class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
        >
          <img
            alt="test-address1"
            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="55" cx="90" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="100" cy="60" fill="rgb(0, 188, 212)"/><circle r="60" cx="50" cy="30" fill="rgb(139, 195, 74)"/></svg>"
            title="test-address1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
